# pillow-jpegxl-plugin

./: .gitignore  .gitmodules  .pre-commit-config.yaml  1x1_exif_xmp.png.jxl  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml  requirements-dev.txt  test_exif.py
.github/: dependabot.yml
.github/workflows/: CI.yml  benchmarks.yml  pre-commit.yml  release.yml  test.yml
benchmarks/: benchmarks_encode.py
pillow_jxl/: JpegXLImagePlugin.py  __init__.py  __init__.pyi
pillow_jxl_plugin/: JpegXLImagePlugin.py  __init__.py
src/: decode.rs  encode.rs  lib.rs
test/: test_plugin.py
test/images/: README.md  create_f16_image.py  random_image_f16.exr  random_image_f16.jxl  sample_float.jxl  sample_float.ppm
test/images/metadata/: 1x1_exif_xmp.jpg.jxl  sample.xmp
tests/: test_plugin.py
tests/images/icc_profile/: 62AHB.jxl
