[package]
name = "pillow-jxl-plugin"
version = "1.3.4"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pillow_jxl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version="0.25.1", features = ["extension-module"] }
jpegxl-rs = { version="0.11.2", default-features = false }

[features]
# Enables parallel processing support by enabling the "rayon" feature of jpeg-decoder.
vendored = ["jpegxl-rs/vendored"]
dynamic = []
