[package]
name = "pillow-jxl-plugin"
version = "1.3.7"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pillow_jxl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version="0.27.1", features = ["extension-module", "generate-import-lib"] }
jpegxl-rs = { version="0.12.0", default-features = false }
half = "2.7.1"

[features]
# Enables parallel processing support by enabling the "rayon" feature of jpeg-decoder.
vendored = ["jpegxl-rs/vendored"]
dynamic = []
